# sipjsserver

./: .dockerignore  .gitignore  CLAUDE.md  CONTEXT.md  Dockerfile  README.md  bootstrap-test.js  docker-compose.yml  eslint.config.js  package-lock.json  package.json  skills-lock.json  tsconfig.bin.json  tsconfig.build.json  tsconfig.consumer-api.json  tsconfig.json  tsconfig.k8s-bringup.json  tsconfig.test-harness.json  tsconfig.tests.json  vitest.aliases.ts  vitest.config.fake.ts  vitest.config.k8s.ts  vitest.config.live.ts  vitest.config.ts
.claude/: settings.json
bench/: README.md  corpus.ts  sip-parser-bench.ts
dev_docs/: refer-rebuild-findings.md
docs/: AdvancedCallModel.md  CallModel.md  K8S_test.md  PlanFixByeAnswer.md  RFC_Verification.md  TODO-pcap-replay.md  TODO-transport-port-collision.md  TODO.md  b2bua-sip-headers.md  howto_proxy_register_test.md  k8s-endurance.md  lb-proxy-ha.md  leg-termination-model.md  media-testing.md  overload-protection.md  rule-coverage-and-killing.md  rule-extension-guide.md  sip-call-control.yaml  test-api-external.md  tracing-design.md  typescript-effect.md
native/sip-parser/: .gitignore  Cargo.toml  index.cjs
native/sip-parser/src/: lib.rs
scripts/: abnf-fuzz-driver.ts  fetch-media-clips.ts  native-udp-smoke.ts  rule-kill.ts  trace-lookup.py
sippperftest/: README.md  analyze-heap.mjs  analyze-perf.py  find-retainers.mjs  inspect-node.mjs  list-retainers.mjs  memleak-test-k8s.sh  memleak-test.sh  overload.sh  sipp-perf.sh  uac-overload.xml  uac.xml  uas-overload.xml  uas.xml  values-memleak-worker.yaml
(+1056 files in other folders)
